--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -1,113 +1,117 @@
-<h2>Validaciones Reactivas</h2>
+<h2>Reactive Validations</h2>
 <hr>
 
 <div class="row">
-    <div class="col">
+  <div class="col">
 
-        <form autocomplete="off">
+    <form [formGroup]="myForm" (ngSubmit)="onSubmit()" autocomplete="off">
 
-            <!-- Nombre -->
-            <div class="row mb-3">
-                <label class="col-sm-3 col-form-label">Nombre</label>
-                <div class="col-sm-9">
-                    <input type="text"
-                           class="form-control"
-                           placeholder="Nombre del usuario">
+      <!-- Nombre -->
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Full Name</label>
+        <div class="col-sm-9">
+          <input type="text"
+            class="form-control"
+            formControlName="name"
+            placeholder="User's full name">
+          <span *ngIf="isValidField('name')" class="form-text text-danger">
+            It must be in first and last name format.
+          </span>
+        </div>
+      </div>
 
-                    <span class="form-text text-danger">
-                        Debe de ser en formato de nombre y apellido
-                    </span>
-                </div>
-            </div>
+      <!-- Email -->
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Email</label>
+        <div class="col-sm-9">
+          <input type="email"
+            class="form-control"
+            formControlName="email"
+            placeholder="User's E-mail">
+          <span *ngIf="isValidField('email')" class="form-text text-danger">
+            email error message
+          </span>
+        </div>
+      </div>
 
-            <!-- Email -->
-            <div class="row mb-3">
-                <label class="col-sm-3 col-form-label">Email</label>
-                <div class="col-sm-9">
-                    <input type="email"
-                           class="form-control"
-                           placeholder="Email del usuario">
-                    <span class="form-text text-danger">
-                        mensaje de error del email
-                    </span>
-                </div>
-            </div>
+      <!-- Username -->
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Username</label>
+        <div class="col-sm-9">
+          <input type="text"
+            class="form-control"
+            formControlName="username"
+            placeholder="Username or nickname">
+          <span *ngIf="isValidField('username')" class="form-text text-danger">
+            The username can't be Strider
+          </span>
+        </div>
+      </div>
 
-            <!-- Username -->
-            <div class="row mb-3">
-                <label class="col-sm-3 col-form-label">Username</label>
-                <div class="col-sm-9">
-                    <input type="text"
-                           class="form-control"
-                           placeholder="Nombre código del usuario">
-                    <span class="form-text text-danger">
-                         El username no puede ser Strider
-                    </span>
-                </div>
-            </div>
+      <!-- Password -->
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Password</label>
+        <div class="col-sm-9">
+          <input type="password"
+            class="form-control"
+            formControlName="password"
+            placeholder="Password of your account">
+          <span *ngIf="isValidField('password')" class="form-text text-danger">
+            The password must be longer than 6 characters.
+          </span>
+        </div>
+      </div>
 
-            <!-- Password -->
-            <div class="row mb-3">
-                <label class="col-sm-3 col-form-label">Password</label>
-                <div class="col-sm-9">
-                    <input type="password"
-                           class="form-control"
-                           placeholder="Password de su cuenta">
+      <!-- Password2 -->
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Confirm Password</label>
+        <div class="col-sm-9">
+          <input type="password"
+            class="form-control"
+            formControlName="password2"
+            placeholder="Confirm password">
+          <span *ngIf="isValidField('password2')" class="form-text text-danger">
+            Passwords must be the same
+          </span>
+        </div>
+      </div>
 
-                    <span class="form-text text-danger">
-                         La contraseña debe de ser mayor de 6 caracteres.
-                    </span>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col">
+          <button class="btn btn-primary float-end"
+            type="submit">
+            Create
+          </button>
+        </div>
+      </div>
 
-            <!-- Password2 -->
-            <div class="row mb-3">
-                <label class="col-sm-3 col-form-label">Confirmar</label>
-                <div class="col-sm-9">
-                    <input type="password"
-                           class="form-control"
-                           placeholder="Confirmar la contraseña">
+    </form>
 
-                    <span class="form-text text-danger">
-                         Las contraseñas deben de ser iguales
-                    </span>
-                </div>
-            </div>
-
-
-            <div class="row">
-                <div class="col">
-                    <button class="btn btn-primary float-end"
-                            type="submit">
-                        Crear
-                    </button>
-                </div>
-            </div>
-
-
-        </form>
-    </div>
+  </div>
 </div>
 
 
-<h2>Form Valid: </h2>
-<h2>Form Status: </h2>
-<h2>Form Pending: </h2>
+<h2>Form Valid: {{ myForm.valid }} </h2>
+<h2>Form Status: {{ myForm.status }} </h2>
+<h2>Form Pending: {{ myForm.pending }} </h2>
 <h2>Form errors</h2>
-<pre>{{ 'formulario' | json }}</pre>
+  <pre>{{ myForm.errors | json }}</pre>
 
-<h5>Nombre</h5>
-<pre>{{ 'formulario' | json }}</pre>
+  <h5>FullName</h5>
+  <pre>{{ myForm.controls['name'].errors | json }}</pre>
+  <!-- <pre>{{ myForm.value.name | json }}</pre> v1 -->
 
-<h5>Email</h5>
-<pre>{{ 'formulario' | json }}</pre>
+  <h5>Email</h5>
+  <pre>{{ myForm.controls['email'].errors | json }}</pre>
+  <!-- <pre>{{ myForm.value.email | json }}</pre> v1 -->
 
-<h5>Username</h5>
-<pre>{{ 'formulario' | json }}</pre>
+  <h5>Username</h5>
+  <pre>{{ myForm.controls['username'].errors | json }}</pre>
+  <!-- <pre>{{ myForm.value.username | json }}</pre> v1 -->
 
+  <h5>Password</h5>
+  <pre>{{ myForm.value.password | json }}</pre>
 
-<h5>Password</h5>
-<pre>{{ 'formulario' | json }}</pre>
+  <h5>Confirm Password</h5>
+  <pre>{{ myForm.controls['password2'].errors| json }}</pre>
 
-<h5>Confirmar</h5>
-<pre>{{ 'formulario' | json }}</pre>
