--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -67,14 +67,14 @@
 
 </form>
 
-<span>Valid</span>
+<h5>Valid</h5>
 <pre>{{ myForm.valid| json }}</pre>
 <br>
 
-<span>Value</span>
+<h5>Value</h5>
 <pre>{{ myForm.value | json }}</pre>
 <br>
 
-<span>Add game</span>
+<h5>Add game</h5>
 <pre>{{ newFavorite.valid | json }}</pre>
 <pre>{{ newFavorite.value | json }}</pre>
