--- a/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -1,87 +1,99 @@
-<h2>Reactivos: Switches</h2>
+<h2>Reactives: Switches</h2>
 <hr>
-<form autocomplete="off">
+
+<form [formGroup]="myForm" (ngSubmit)="onSave()" autocomplete="off">
 
   <!-- Radio -->
   <div class="row mb-3">
     <label class="col-sm-3 col-form-label">Genre</label>
     <div class="col-sm-9">
+
       <div class="form-check">
         <input class="form-check-input"
           type="radio"
           value="M"
+          formControlName="gender"
           id="radioMasculino">
         <label class="form-check-label" for="radioMasculino">
           Male
         </label>
       </div>
+
       <div class="form-check">
         <input class="form-check-input"
           type="radio"
           value="F"
+          formControlName="gender"
           id="radioFemenino">
         <label class="form-check-label" for="radioFemenino">
           Female
         </label>
       </div>
+
     </div>
   </div>
 
   <!-- Switches -->
   <div class="row mb-3">
-    <label class="col-sm-3 col-form-label">Notificaciones</label>
+    <label class="col-sm-3 col-form-label">Notifications</label>
     <div class="col-sm-9">
+
       <div class="form-check form-switch mt-2">
         <input class="form-check-input"
           type="checkbox"
+          formControlName="wantNotifications"
           id="flexSwitchCheckChecked">
-        <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+        <label class="form-check-label" for="flexSwitchCheckChecked">I want to receive notifications</label>
       </div>
+
     </div>
   </div>
 
   <!-- Switches -->
   <div class="row mb-3">
-      <label class="col-sm-3 col-form-label"></label>
-      <div class="col-sm-9">
-          <div class="form-check">
-              <input class="form-check-input"
-                      type="checkbox"
-                      id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                Términos y condiciones de uso
-              </label>
-            </div>
-            <span class="form-text text-danger">
-                Debe de aceptar las condiciones de uso
-            </span>
+    <label class="col-sm-3 col-form-label"></label>
+    <div class="col-sm-9">
 
+      <div class="form-check">
+        <input class="form-check-input"
+          type="checkbox"
+          formControlName="termsAndConditions"
+          id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Terms and conditions of use
+        </label>
       </div>
+      <span *ngIf="isValidField('termsAndConditions')" class="form-text text-danger">
+        You must accept the conditions of use
+      </span>
+
+    </div>
   </div>
+
 
   <!-- Boton submit -->
   <div class="row">
-      <div class="col">
-          <button class="btn btn-primary float-end"
-                  type="submit">
-              Guardar
-          </button>
-      </div>
+    <div class="col">
+      <button class="btn btn-primary float-end"
+        type="submit">
+        Save
+      </button>
+    </div>
   </div>
 
 </form>
 
 
-<h5>Valor del formulario</h5>
-<pre>{{ 'object' | json }}</pre>
+<h5>Form Value</h5>
+<pre>{{ myForm.value| json }}</pre>
 <br>
 
-<h5>Persona</h5>
-<pre>{{ 'object' | json }}</pre>
+<h5>Person</h5>
+<pre>{{ person | json }}</pre>
 <br>
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
